--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,17 @@ proguard/
 
 # Log Files
 *.log
+# Non-project-specific build files:
+platforms/android/build.xml
+platforms/android/local.properties
+platforms/android/gradlew
+platforms/android/gradlew.bat
+platforms/android/gradle
+# Ant builds
+platforms/android/ant-built
+platforms/android/ant-gen
+# Eclipse builds
+platforms/android/gen
+platforms/android/out
+# Gradle builds
+platforms/android/build
